Fix row-gap of professional-items-container

--- a/styles.css
+++ b/styles.css
@@ -389,6 +389,7 @@ section h1 {
     justify-content: center;
     align-items: center;
     padding-top: 6rem;
+    row-gap: 3rem;
 }
 
 .professional-item {
